--- a/src/Components/BusinessLists.module.css
+++ b/src/Components/BusinessLists.module.css
@@ -1,3 +1,5 @@
-.card {
+ul .card {
     display: inline-flex;
+    gap: 1.5rem;
+    columns: 3;
 }
